Changes between 1.0.x and 'trunk'
=====================================

* introduce py.io.TextIO and py.io.BytesIO for distinguishing between
  text/unicode and byte-streams (uses underlying standard lib io.* 
  if available) 
 
* simplified internal localpath implementation 

Changes between 1.0.0 and 1.0.1
=====================================

* added a 'pytest_nose' plugin which handles nose.SkipTest, 
  nose-style function/method/generator setup/teardown and 
  tries to report functions correctly. 

* capturing of unicode writes or encoded strings to sys.stdout/err 
  work better, also terminalwriting was adapted and somewhat 
  unified between windows and linux. 

* improved documentation layout and content a lot

* added a "--help-config" option to show conftest.py / ENV-var names for
  all longopt cmdline options, and some special conftest.py variables. 
  renamed 'conf_capture' conftest setting to 'option_capture' accordingly. 

* fix issue #27: better reporting on non-collectable items given on commandline 
  (e.g. pyc files)

* fix issue #33: added --version flag (thanks Benjamin Peterson) 

* fix issue #32: adding support for "incomplete" paths to wcpath.status()

* "Test" prefixed classes are *not* collected by default anymore if they 
  have an __init__ method 

* monkeypatch setenv() now accepts a "prepend" parameter

* improved reporting of collection error tracebacks

* simplified multicall mechanism and plugin architecture, 
  renamed some internal methods and argnames 

Changes between 1.0.0b9 and 1.0.0
=====================================

* more terse reporting try to show filesystem path relatively to current dir 
* improve xfail output a bit

Changes between 1.0.0b8 and 1.0.0b9
=====================================

* cleanly handle and report final teardown of test setup

* fix svn-1.6 compat issue with py.path.svnwc().versioned()
  (thanks Wouter Vanden Hove)

* setup/teardown or collection problems now show as ERRORs