@@ -1,0 +1,3 @@
+#!/usr/bin/env python
+from _findpy import py
+py.cmdline.pyconvert_unittest()
