@@ -1,0 +1,2 @@
+@echo off
+python "%~dp0\..\py.convert_unittest" %*
